--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_messaging:
   provider:
   flutter_swiper:
+  # razorpay_flutter: 1.1.0
+  webview_flutter: 
+  fluttertoast: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
